--- a/Python_files/requirements.txt
+++ b/Python_files/requirements.txt
@@ -1,6 +1,7 @@
 langchain==0.1.0
 langchain_community==0.0.11
 langchain_core==0.1.8
+langchain_openai==0.0.2
 pyTelegramBotAPI==4.14.1
 openai==1.6.1
 mysql-connector-python==8.2.0
