--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,7 @@ jobs:
         passphrase: ${{ secrets.HETZNER_KEY_PASSPHRASE }}
         port: 618
         script: |
-          sudo -i
-          cd /root/Projects/Beta_Health/Beta_Health_Git/
-          git pull origin master
-          pip install -r Python_files/requirements.txt  
-          systemctl restart mybot.service         
+          sudo git -C /root/Projects/Beta_Health/Beta_Health_Git pull origin master
+          sudo pip install -r /root/Projects/Beta_Health/Beta_Health_Git/Python_files/requirements.txt
+          sudo systemctl restart mybot.service    
         
