--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: 
       name: Beta_Health 
+    if: github.actor == 'mrtroll1'
     steps:
     - name: Check out the repository
       uses: actions/checkout@v3
