--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,12 @@ jobs:
     steps:
       - name: Check out the repository
         uses: actions/checkout@v3
-
+        
+      - name: Configure Git
+        run: |
+          git config --global user.email ${{ secrets.GIT_EMAIL }}
+          git config --global user.name "mrtroll1"
+          
       - name: Deploy to server
         uses: appleboy/ssh-action@master
         with:
