--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,13 @@ jobs:
         run: |
           git config --global user.email ${{ secrets.GIT_EMAIL }}
           git config --global user.name "mrtroll1"
+
+      - name: Run MySQL script
+          if: contains(github.event.head_commit.message, 'specific-keyword')  # Check commit message
+          env:
+            MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
+          run: |
+            mysql -u root -p"$MYSQL_PASSWORD" -h 127.0.0.1 -P 3307 Beta_Health < /home/luka/Projects/Beta_Health/Beta_Health_Git/MySQL_Scripts/init.sql
           
       - name: Deploy to server
         uses: appleboy/ssh-action@master
