--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
           git config --global user.name "mrtroll1"
 
       - name: Run MySQL script
-          if: contains(github.event.head_commit.message, 'specific-keyword')  # Check commit message
+          if:  contains(github.event.head_commit.message, 'init_mysql')
           env:
             MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
           run: |
@@ -38,5 +38,4 @@ jobs:
           script: |
             git -C /home/luka/Projects/Beta_Health/Beta_Health_Git pull origin master
             sudo pip install -r /home/luka/Projects/Beta_Health/Beta_Health_Git/Python_files/requirements.txt  
-            mysql -u root -p"$MYSQL_PASSWORD" -h 127.0.0.1 -P 3307 Beta_Health < /home/luka/Projects/Beta_Health/Beta_Health_Git/MySQL_Scripts/init.sql
             sudo systemctl restart mybot.service
